Completely resolve layout shifting by forcing a vertical scrollbar globally

--- a/www/assets/css/_layout.scss
+++ b/www/assets/css/_layout.scss
@@ -4,7 +4,7 @@ $content-width: calc(min($content-width, 100%));
 
 :root {
     background: $softblack;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 body {
